<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="hk.kllstudio.eta.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="hk.kllstudio.eta.ui.routes.RouteFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_route" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="hk.kllstudio.eta.ui.stops.StopFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_stop" />
</navigation>