<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.routes.RouteFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/searchRouteField"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/label_search_route_hint"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:startIconDrawable="@drawable/ic_baseline_search_24"
            style="@style/Widget.Material3.TextInputLayout.FilledBox">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionSearch|flagForceAscii"
            android:inputType="textCapCharacters"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/coFilterChip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchRouteField"
        app:selectionRequired="true"
        app:singleLine="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/filter_co_kmb"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:chipIcon="@drawable/circle_indicator"
            app:chipIconTint="@color/kmb"
            app:checkedIconTint="@color/kmb"
            android:text="@string/label_co_kmb" />

        <com.google.android.material.chip.Chip
            android:id="@+id/filter_co_ctb"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:chipIcon="@drawable/circle_indicator"
            app:chipIconTint="@color/ctb"
            app:checkedIconTint="@color/ctb"
            android:text="@string/label_co_ctb" />

        <com.google.android.material.chip.Chip
            android:id="@+id/filter_co_nwfb"
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            app:chipIcon="@drawable/circle_indicator"
            app:chipIconTint="@color/nwfb"
            app:checkedIconTint="@color/nwfb"
            android:text="@string/label_co_nwfb" />
    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/filteredRouteList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coFilterChip" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/button_transfer_assist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:icon="@drawable/baseline_transfer_within_a_station_24"
            android:text="@string/label_tranfer_assistant"/>
</androidx.constraintlayout.widget.ConstraintLayout>